--- a/index.html
+++ b/index.html
@@ -1368,12 +1368,12 @@
             flex-direction: row;
             width: 985px;
             height:35px ;
-            justify-content: left;
+            justify-content: center;
             align-items: center;
             background: transparent;
             font-family: 'merienda';
-            font-size: 10.5px;
-            color: rgb(0, 29, 109);
+            font-size: 12px;
+            color: rgb(49, 49, 49);
             margin-top: 4px;
             text-align: center;
         }
@@ -4008,7 +4008,7 @@ function showSlides(n) {
                 <div class="myTITLE">
                     <figure>
                 <figcaption>
-                    Children are like flowers. They need us to take care of them. Teaching them has always been funny for me because I learned much back. [Gaby]
+                <b>  Children are like flowers. They need us as adults to take care of them. Teaching them has been wonderful for me because I learned much back. [Gaby C.]</b>
                 </figcaption>
                 </figure>
                 </div>
