--- a/index.html
+++ b/index.html
@@ -4026,9 +4026,9 @@ function showSlides(n) {
                             </p>
 
                             <p style="font-family: 'helvetica'; color: rgba(33, 33, 33, 0.903); font-size: 15.78px; line-height: 22px; padding: 5px;">
-                            <b>In Burkina Faso</b> as everywhere there is a lot of challenges about inclusiveness. Getting "<b>differently able people especially disabled
-                            people</b>" included in communities is not regular on the daily basis. But it's so important to give them opportunities even their disabilities. Some organisations
-                            are steadily working to get it done including to be trully inclusive.
+                            <b>In Burkina Faso</b> as everywhere worldwide, there are many challenges about inclusiveness. Getting "<b>differently abled
+                            people</b>" included in the communities is not evident on a daily basis. But it's so important to give them opportunities they deserve even their disabilities. Some organisations
+                            are steadily working to get inclusiveness done.
                             <br>
 
                         </p>
@@ -4329,8 +4329,8 @@ function showSlides(n) {
                 </div>
 
                 <div class="FASOTITLE">
-                <p><b>Burkina Faso, the land of integrity, a landlocked and low-income Sub-Saharan African country with limited natural resources, is administratively structured of 45 provinces and is nested within the heart of West Africa. Burkina Faso was a former colony of France from which it gained (took) independence in August 5th, 1960. Its capital and
-                main city is Ouagadougou populated by 1.086.505 people in the city area according to the website of PopulationStat.The global population of Burkina Faso is about 23 300 000 inhabitants with a dominant percentage of youth. Geography influences Economy. The economy of Burkina Faso is mostly based on the
+                <p><b><em style="font-family: 'arial black'; color:rgb(214, 41, 18)">Burkina Faso</em>, the land of integrity, a landlocked and low-income Sub-Saharan African country with limited natural resources, is administratively structured of <em style="font-family: 'arial black'; color:rgb(214, 41, 18)">45 provinces </em>and is nested within the heart of <em style="font-family: 'arial black'; color:rgb(214, 18, 214)">West Africa</em>. Burkina Faso was a former colony of France from which it gained (took) independence in August 5th, 1960. 
+                    <em style="font-family: 'arial black'; color:rgb(214, 41, 18)">Its capital and main city is Ouagadougou</em> populated by 1.086.505 people in the city area.The global <em style="font-family: 'arial black'; color:green;"> population of Burkina Faso is about 23 300 000 inhabitants</em> with a dominant percentage of youth. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                 agriculture, livestock breeding, mining, market gardening. The informal
                 sector is growing and believed to create more jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé but no a plural mark with 'S' even if it is at least two inhabitants.  
                 </b>    
