--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background-color: rgb(240, 240, 240);
+            background-color: rgba(245, 245, 245, 0.88);
             justify-content: center;
             align-items: center;
         }
