--- a/index.html
+++ b/index.html
@@ -4330,7 +4330,7 @@ function showSlides(n) {
 
                 <div class="FASOTITLE">
                 <p><b><em style="font-family: 'arial black'; color:rgb(214, 41, 18)">Burkina Faso</em>, the land of integrity, a landlocked and low-income Sub-Saharan African country with limited natural resources, is administratively structured of <em style="font-family: 'arial black'; color:rgb(214, 41, 18)">45 provinces </em>and is nested within the heart of <em style="font-family: 'arial black'; color:rgb(214, 18, 214)">West Africa</em>. Burkina Faso was a former colony of France from which it gained (took) independence in August 5th, 1960. 
-                    <em style="font-family: 'arial black'; color:rgb(214, 41, 18)">Its capital and main city is Ouagadougou</em> populated by 1.086.505 people in the city area.The global <em style="font-family: 'arial black'; color:green;"> population of Burkina Faso is about 23 300 000 inhabitants</em> with a dominant percentage of youth. Geography influences Economy. The economy of Burkina Faso is mostly based on the
+                    <em style="font-family: 'arial black'; color:rgb(214, 41, 18)">Its capital and main city is Ouagadougou</em> populated by 1.086.505 people in the city area. The global <em style="font-family: 'arial black'; color:green;"> population of Burkina Faso is about 23 300 000 inhabitants</em> with a dominant percentage of youth. Geography influences Economy. The economy of Burkina Faso is mostly based on the
                 agriculture, livestock breeding, mining, market gardening. The informal
                 sector is growing and believed to create more jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé but no a plural mark with 'S' even if it is at least two inhabitants.  
                 </b>    
@@ -5400,6 +5400,8 @@ function showSlides(n) {
         <b style="color: cyan; font-size: 14x;">Disability is not destiny because we are differently abled</b>
         <br>
         <b style="color: greenyellow; font-size: 11.5px; font-family: helvetica; color: lightsalmon"> Webmaster: Gabriel C. Disability Rights Activist <em style="color: blueviolet; font-family: 'arial'; font-size: 11.25x;">[ Looking for a job on editing web pages, contents and static websites ]</em></b>
+        <br>
+        <a href= "mailto:compaorebiga@gmail.com" style="color: yellow; font-family: 'Merienda'; font-size: 12px;">Send Me a Message Please !</a>
         <br>
     </div>
 
