--- a/index.html
+++ b/index.html
@@ -4329,8 +4329,8 @@ function showSlides(n) {
                 </div>
 
                 <div class="FASOTITLE">
-                <p><b><em style="font-family: 'arial black'; color:rgb(214, 41, 18)">Burkina Faso</em>, the land of integrity, a landlocked and low-income Sub-Saharan African country with limited natural resources, is administratively structured of <em style="font-family: 'arial black'; color:rgb(214, 41, 18)">45 provinces </em>and is nested within the heart of <em style="font-family: 'arial black'; color:rgb(214, 18, 214)">West Africa</em>. Burkina Faso was a former colony of France from which it gained (took) independence in August 5th, 1960. 
-                    <em style="font-family: 'arial black'; color:rgb(214, 41, 18)">Its capital and main city is Ouagadougou</em> populated by 1.086.505 people in the city area. The global <em style="font-family: 'arial black'; color:green;"> population of Burkina Faso is about 23 300 000 inhabitants</em> with a dominant percentage of youth. Geography influences Economy. The economy of Burkina Faso is mostly based on the
+                <p><b><em style="font-family: 'arial black'; color:rgb(214, 41, 18)">Burkina Faso</em>, the land of integrity, a landlocked and low-income Sub-Saharan African country with limited natural resources, is administratively structured of <em style="font-family: 'arial black'; color:rgb(214, 41, 18)">45 provinces </em>and nested within the heart of <em style="font-family: 'arial black'; color:rgb(214, 18, 214)">West Africa</em>. Burkina Faso was a former colony of France from which it gained (took) independence in August 5th, 1960. 
+                    <em style="font-family: 'arial black'; color:rgb(214, 41, 18)">Its capital and main city is Ouagadougou</em> populated by 1.086.505 people in the city area. The global <em style="font-family: 'arial black'; color:green;"> population of Burkina Faso is about 23 300 000 inhabitants</em> with a dominant percentage of youth. Geography influences Economy. The economy of Burkina Faso is mostly based on
                 agriculture, livestock breeding, mining, market gardening. The informal
                 sector is growing and believed to create more jobs. Citizens of Burkina Faso are called Burkinabè or Burkinabé but no a plural mark with 'S' even if it is at least two inhabitants.  
                 </b>    
@@ -5026,13 +5026,13 @@ function showSlides(n) {
                             Immigration Is Heartbreaking
                         </div>
                         <div class="explanation2">
-                            As a physical disabled person who legally made it to Canada, I experienced many challenges on my way and still experiencing. In addition to racism and discrimination
-                            as a black and disabled person, seeking asylum in Montreal [Canada] is a long and difficult way to reach. It matters with hard work, rigor, ponctuality, credibility and lots energy and optimism to pursue administrative and longer procedures
-                            that can last at least after many years (5-6 years) before having the citizenship if there is obviously a grant. It's been so hard because
+                            As a physical disabled person who legally made it to Canada, I experienced many challenges on my way and still experiencing. In addition to racism and discrimination, 
+                            seeking asylum in Montreal [Canada] is a long and difficult way to reach. It matters with hard work, rigor, ponctuality, credibility, a lot of energy and a dose of optimism to deal with longer and administrative procedures
+                            that can last at least after many years (5-6 years) before getting the citizenship if there is obviously a grant. It's been so hard because
                             as a newcomer in a new country I have to embrace a new culture in addition to mine and then get adapted and integrated.
-                            I had neither parents, nor relatives in Quebec-Canada at this time and I have to find out a way to stay. After spending 3 days
+                            I had neither parents, nor relatives in Quebec-Canada at this time and I have to find out a way and place to stay. After spending 3 days
                             in my motel room my finances have been hit. Thereby I've had to look for a cheap
-                            room to live. But how to do it as a newcomer in one of the coldest countries around the world during winter time? Something was sure, I
+                            room to live. But how to do it as a newcomer in one of the coldest countries around the world on an upcoming winter ? Something was sure, I
                             couldn't afford to sleep outside.
                             Then I went to OBM shelter in downtown Montreal. There I spent a half year and then I moved to "La Maison du Père" to wait for my hearing. 
                             I have successfully defended my case and got a grant. That's why I want to share some of my experiences with you in an upcoming book<a href="#">Learn more... </a>
@@ -5401,7 +5401,7 @@ function showSlides(n) {
         <br>
         <b style="color: greenyellow; font-size: 11.5px; font-family: helvetica; color: lightsalmon"> Webmaster: Gabriel C. Disability Rights Activist <em style="color: blueviolet; font-family: 'arial'; font-size: 11.25x;">[ Looking for a job on editing web pages, contents and static websites ]</em></b>
         <br>
-        <a href= "mailto:compaorebiga@gmail.com" style="color: yellow; font-family: 'Merienda'; font-size: 12px;">Send Me a Message Please !</a>
+        <a href= "mailto:compaorebiga@gmail.com" style="color: yellow; font-family: 'Merienda'; font-size: 12px;">Send Message</a>
         <br>
     </div>
 
