--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         .Photography-content a {
             font-size: 17px;
             float: none;
-            color: #2c3bab;
+            color: #2635a3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -225,7 +225,7 @@
         .Sport-content a {
             font-size: 16px;
             float: none;
-            color: #2c3bab;
+            color: #2635a3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -302,7 +302,7 @@
         .Education-content a {
             font-size: 16px;
             float: none;
-            color: #2c3bab;
+            color: #2635a3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -378,7 +378,7 @@
         .Videos-content a {
             font-size: 17px;
             float: none;
-            color: #2c3bab;
+            color: #2635a3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -455,7 +455,7 @@
             width: 73px;
             font-size: 17px;
             float: none;
-            color: #2c3bab;
+            color: #2635a3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -609,7 +609,7 @@
         .TikiYiki-content a {
             font-size: 17px;
             float: none;
-            color: #2c3bab;
+            color: #2635a3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -687,7 +687,7 @@
         .Disability-content a {
             font-size: 17px;
             float: none;
-            color: #2c3bab;
+            color: #2635a3;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
