--- a/index.html
+++ b/index.html
@@ -5482,12 +5482,12 @@ function showSlides(n) {
           <br>
           In 2017, unfortunately for security reasons, Gabriel has left his country to fly to <a href="https://en.wikipedia.org/wiki/Canada" target="_blank"> Canada </a>. In fact, some of Tiki N'Yiki activities, including EDUCATION, awareness on disability, have been temporarily stopped but will be redefined if the conditions of security are met.
           <br>
-          He is rebuilding a new life. Among other things, he wrote his memoirs, learned computer code while wishing to train in the sciences of new technologies. He is passionate about coding and is developing this website.
+          He is rebuilding a new life. Among other things, he wrote his memoirs, learn coding while wishing to study Informations and Technologies. He is passionate on coding and is developing this website.
           <br>
-          Gabriel wants to create a foundation to support the education of children with disabilities, defend their rights and create opportunities for them
+          Gabriel nedds to create a foundation to improve education for children with disabilities, defend their rights and create opportunities for them
  
          <a href="https://www.ontb.bf/" target="_blank"> in Burkina Faso.</a>
-        He likes nature, photography, histoiry, geography, architecture, cyclism, European soccer and hockey.
+        He likes nature, photography, history, geography, architecture, cyclism, European soccer and hockey.
        </span>
      </p>
        <button class="button" onclick="myFunction()" id="myBtn">Lire Plus</button>
