--- a/index.html
+++ b/index.html
@@ -3665,6 +3665,13 @@ background: #717171;
     border-radius: 50%;
 }
 
+.button{
+    width: 100px;
+    height: 40px;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    font-size: 14px;
+}
     </style>
 
     <title>home.html</title>
@@ -5490,7 +5497,7 @@ function showSlides(n) {
         He likes nature, photography, history, geography, architecture, cyclism, European soccer and hockey.
        </span>
      </p>
-       <button class="button" onclick="myFunction()" id="myBtn">Lire Plus</button>
+       <button class="button" onclick="myFunction()" id="myBtn">Lire Moins</button>
        
        <script>
        function myFunction() {
