--- a/index.html
+++ b/index.html
@@ -5459,9 +5459,9 @@ function showSlides(n) {
         at Bassy high school in <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> 
         and then at <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton</a> 
         high school in <a href="https://mairie-ouaga.bf/accueil" target="_blank"> Ouagadougou</a> 
-        * <a href="https://www.ontb.bf/" target="_blank">Burkina Faso</a> and holds a Patent of Undergraduate Studies (P.U.S) called B.E.P.C in French.
+        * <a href="https://www.ontb.bf/" target="_blank">Burkina Faso</a>. He holds a Patent of Undergraduate Studies (P.U.S) called B.E.P.C in French.
        
-        As fervent defender of Disability Rights, Gabriel was involved in several associations in the field of education,
+        As a fervent defender of Disability Rights, Gabriel was involved in several associations in the field of education,
         promotion and defense of Disability Rights, especially disabled kids rights including first the right to get educated.
 
          </p>
