--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         }
 
         .Promoter:hover .Promoter-content:hover a:hover{
-            width: auto;
+            width: 121px;
             height: 50px;
             text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
@@ -408,7 +408,7 @@
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            width: 25%;
+            width: 11%;
         }
 
         .Contact {
@@ -3618,7 +3618,7 @@ background: #717171;
             width: 84%;
             height: 100%;
             padding: 10px;
-            border: 2px solid #e3e3e3;
+            margin-top: 3rem;
         }
 
         .Promo{
@@ -3632,7 +3632,7 @@ background: #717171;
             padding: 10px;
             border: none;
             font-size: 15px;
-            color: #272727f2;
+            color: #1d1d1df2;
             line-height: 22px;
         }
 
@@ -3969,7 +3969,7 @@ function showSlides(n) {
             <div class="Promoter-content">
                     
                         <div>
-                            <a href="#" target="blank"> Promoter</a>
+                            <a href="#Who" target="blank"> Promoter</a>
                               
                         </div>
         </div>
@@ -5450,6 +5450,7 @@ function showSlides(n) {
 </div>
 
  </div>
+ <a name="Who"> </a>
 
 <div class="Promotion">
 
