--- a/index.html
+++ b/index.html
@@ -3667,10 +3667,11 @@ background: #717171;
 
 .button{
     width: 100px;
-    height: 40px;
-    border-radius: 0.5rem;
-    cursor: pointer;
+    height: auto;
+    padding: 5px;
+    border-radius: 0.35rem;
     font-size: 14px;
+    cursor: pointer;
 }
     </style>
 
