--- a/index.html
+++ b/index.html
@@ -5499,7 +5499,7 @@ function showSlides(n) {
         He likes nature, photography, history, geography, architecture, cyclism, European soccer and hockey.
        </span>
      </p>
-       <button class="button" onclick="myFunction()" id="myBtn">Lire Moins</button>
+       <button class="button" onclick="myFunction()" id="myBtn">Read less</button>
        
        <script>
        function myFunction() {
@@ -5509,11 +5509,11 @@ function showSlides(n) {
        
          if (dots.style.display === "none") {
            dots.style.display = "inline";
-           btnText.innerHTML = "Lire Plus"; 
+           btnText.innerHTML = "Read more"; 
            moreText.style.display = "none";
          } else {
            dots.style.display = "none";
-           btnText.innerHTML = "Lire Moins"; 
+           btnText.innerHTML = "Read less"; 
            moreText.style.display = "inline";
          }
        }
