--- a/index.html
+++ b/index.html
@@ -3634,7 +3634,7 @@ background: #717171;
             padding: 10px;
             border: none;
             font-size: 15px;
-            color: #1d1d1df2;
+            color: #111111f2;
             line-height: 22px;
         }
 
@@ -5500,7 +5500,7 @@ function showSlides(n) {
         He likes nature, photography, history, geography, architecture, cyclism, European soccer and hockey.
        </span>
      </p>
-       <button class="button" onclick="myFunction()" id="myBtn">Read more</button>
+       <button class="button" onclick="myFunction()" id="myBtn">Read More</button>
        
        <script>
        function myFunction() {
