--- a/index.html
+++ b/index.html
@@ -5557,13 +5557,17 @@ The Promoter and Webmaster
 
 <div class="Thankiou"> 
     <div> 
-    THANKSGIVING  /  REMERCIEMENTS
+    THANKSGIVINGS  /  REMERCIEMENTS
     </div>
 
     <div class="NAME"> 
-        MOM & DAD & MY FAMILY (ZNR-BFASO)
+        MY MOM & DAD (ZNR-BFASO)
         <br>
-        Nema & AMI TIEM. (ZNR-BFASO)
+        Sister SUZI. & Family (ZNR-BFASO)
+        <br>
+        Nieces Nema & AMI TIEM. (ZNR-BFASO)
+        <br>
+        Nephew Herm. (ZNR-BFASO)
         <br>
         Ben OUED (ZNR-BFASO)
         <br>
@@ -5593,11 +5597,17 @@ The Promoter and Webmaster
      <br>
      CARLOS & CLO (QC-CA)
      <br>
-     I. Simpore (CA)
+     Manon (QC-CA)
+     <br>
+     Vivi (QC-CA)
+     <br>
+     I. Simpore (ON-CA)
      <br>
      MATT (ON-CA)
-
-
+     <br>
+Friends from Switzerland
+<br>
+Friends from France
     </div>
 </div>
 
