--- a/index.html
+++ b/index.html
@@ -3519,7 +3519,7 @@ background: #717171;
             display: flex;
             position: relative;
             top: 25px;
-            background-color: #ffffff;
+            background-color: #fcfcfc;
             color: crimson;
             padding: 7px;
             flex-direction: column;
@@ -3532,7 +3532,7 @@ background: #717171;
             font-family: 'Merienda';
             font-size: 16px;
             border: 0.5px solid rgba(221, 221, 221, 0.161);
-            box-shadow: 0 2px 0.4rem 0.5px rgba(34, 114, 189, 0.931);
+            box-shadow: 0 2px 0.3rem 0.15px rgba(84, 163, 238, 0.931);
             border-radius: 0.25rem;
             margin-top: -1.5rem;
         }
@@ -3542,17 +3542,17 @@ background: #717171;
             border: 0.1px solid rgba(121, 121, 121, 0.486);
             border-bottom: none;
             color: rgba(9, 106, 197, 0.949);
-            box-shadow: 0 1.5px 0.3rem 0.5px rgba(19, 85, 147, 0.931);
+            box-shadow: 0 1px 0.3rem 0.1px rgba(22, 104, 180, 0.931);
             transition: 0.45s ease;
         }
 
         .disabled{
-            background: transparent;
+            background: #fff;
             display: grid;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            color: rgba(5, 131, 228, 0.988);
+            color: rgba(7, 74, 125, 0.988);
             font-size: 17.5px;
             font-family: 'arial black';
             width: 100%;
@@ -3560,15 +3560,15 @@ background: #717171;
             padding: 10px;
             cursor: pointer;
             border: 0.12rem solid transparent;
-            border-radius: 0.5rem;
+            border-radius: 0.25rem;
+            border: 0.12rem solid rgb(253, 84, 23);
         }
 
         .disabled:hover{
-            color:#243c93;
+            color:#1f3278;
             transition: 0.2s linear;
-            border: 0.12rem solid rgb(253, 84, 23);
             border-radius: 0.5rem;
-            background: rgba(255, 255, 255, 0.853);
+            background: #fff;
         }
 
         .read{
@@ -3579,10 +3579,10 @@ background: #717171;
             padding: 10px;
             height: 120px;
             width: 84%;
-            background: rgba(248, 248, 248, 0.381);
+            background: rgba(246, 246, 246, 0.381);
             color: #000;
             margin-top: 4rem;
-            box-shadow: 0 2px 0.3rem 1px rgba(40, 114, 183, 0.842);
+            box-shadow: 0 1px 0.2rem 1px rgba(134, 190, 242, 0.842);
             border-radius: 0.35rem;
         }
 
@@ -3633,22 +3633,23 @@ background: #717171;
             height: auto;
             padding: 10px;
             border: none;
-            font-size: 15px;
-            color: #111111f2;
+            font-size: 16px;
+            color: #212121f2;
             line-height: 22px;
         }
 
         .Prom{
             display: grid;
-            grid-template-rows: 0.15fr 0.25fr;
-            justify-content: center;
+            grid-template-rows: 0.15fr 0.25fr 1fr;
+            justify-content: space-between;
+            row-gap: 1rem;
             justify-items: center;
             width: 400px;
             height: auto;
             padding: 10px;
         }
         .Pro2{
-            width: 300px;
+            width: 100%;
             height: auto;
         }
 
@@ -3673,9 +3674,10 @@ background: #717171;
             justify-content: center;
             justify-items: center;
             width: 360px;
+            row-gap: 1rem;
             height: auto;
             padding: 20px;
-            background: #dfdfdf;
+            background: #e5e5e5;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             font-size: 17px;
             text-align: left;
@@ -3687,7 +3689,7 @@ background: #717171;
 
 .button{
     width: 100px;
-    height: auto;
+    height: 50px;
     padding: 5px;
     border-radius: 0.35rem;
     font-size: 14px;
@@ -5543,13 +5545,13 @@ function showSlides(n) {
    <div class="Prom">
 
     <div class="Pro1">
-The Promoter and Webmaster
+    <b>The Promoter and Webmaster </b>
     </div>
 
     <div class="Pro2">
         <img src="https://www.zupimages.net/up/23/28/kkoy.jpg" alt="At office">
     <figure>
-        <figcaption style="font-family: arial; font-size: 16px; color: #2c3bab; text-align: center;">
+        <figcaption style="margin-top: 0.5rem; font-family: 'Merienda'; font-size: 16px; color: #2c3bab; text-align: center;">
             Disability is not Destiny
             </figcaption>
         </figure>
@@ -5557,7 +5559,7 @@ The Promoter and Webmaster
 
 <div class="Thankiou"> 
     <div> 
-    THANKSGIVINGS  /  REMERCIEMENTS
+    <b> THANKSGIVINGS  /  REMERCIEMENTS </b>
     </div>
 
     <div class="NAME"> 
