--- a/index.html
+++ b/index.html
@@ -3620,7 +3620,7 @@ background: #717171;
             padding: 10px;
             margin-top: 3rem;
             margin-bottom: 1rem;
-            border-bottom: 1px solid #a0a0a0f6;
+           
         }
 
         .Promo{
@@ -3640,7 +3640,7 @@ background: #717171;
 
         .Prom{
             display: grid;
-            grid-template-rows: 0.15fr 0.25fr 1fr;
+            grid-template-rows: 0.15fr 0.25fr;
             justify-content: space-between;
             row-gap: 1rem;
             justify-items: center;
