--- a/index.html
+++ b/index.html
@@ -3361,7 +3361,7 @@ cursor: pointer;
             height: 570px;
             padding-top: 5px;
             padding-bottom: 5px;
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 0 0.5rem 1px rgb(0, 0, 0);
         }
 
         .T{
@@ -3630,21 +3630,21 @@ background: #717171;
             justify-items: center;
             font-family: 'arial';
             width: 650px;
-            height: auto;
+            height: 550px;
             padding: 10px;
             border: none;
-            font-size: 15.45px;
+            font-size: 15.48px;
             color: #212121f2;
             line-height: 22px;
         }
 
         .Prom{
             display: grid;
-            grid-template-rows: 0.15fr 0.25fr;
+            grid-template-rows: 0.15fr 0.2fr 0.2fr;
             justify-content: space-between;
             row-gap: 1rem;
             justify-items: center;
-            width: 400px;
+            width: 450px;
             height: auto;
             padding: 10px;
         }
@@ -3660,8 +3660,18 @@ background: #717171;
             color: darkblue;
         }
 
+        .Pro2{
+            display: grid;
+            grid-template-columns: 0.5fr;
+            justify-content: center;
+            justify-items: center;
+            width: 100%;
+            height: auto;
+            justify-content: center;
+            align-items: center;
+        }
         .Pro2 img{  
-    width: 100%;
+    width: 300px;
     height: auto;
     padding: 4px;
     border: 0.13rem solid rgba(168, 172, 180, 0.902);
@@ -3670,13 +3680,13 @@ background: #717171;
 
 .Thankiou{
     display: grid;
-            grid-template-rows: 1fr;
+            grid-template-rows: 0.5fr;
             justify-content: center;
             justify-items: center;
             width: 360px;
-            row-gap: 1rem;
-            height: auto;
-            padding: 20px;
+            row-gap: 0.5rem;
+            height: 570px;
+            padding: 10px;
             background: #e5e5e5;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             font-size: 17px;
@@ -3685,6 +3695,10 @@ background: #717171;
 .NAME{
     width: auto;
     height: 500px;
+    padding: 10px;
+    color: rgba(89, 36, 158, 0.888);
+    font-size: 16px;
+    line-height: 21px;
 }
 
 .button{
@@ -5593,13 +5607,13 @@ function showSlides(n) {
      <br>
      W. Sugg & Family (ME-USA) 
      <br>
-     Hillary & Mrk & Family (ME-USA)
+     Hillary & Mrek & Family (ME-USA)
      <br>
      D. Turner & FNY (QC-CA)
      <br>
      CARLOS & CLO (QC-CA)
      <br>
-     Manon (QC-CA)
+     Manon B. (QC-CA)
      <br>
      Vivi (QC-CA)
      <br>
@@ -5614,6 +5628,7 @@ Friends from France
 </div>
 
 </div>
+
 </div>
 
 <a href="#Top">
