--- a/index.html
+++ b/index.html
@@ -3685,8 +3685,8 @@ background: #717171;
             justify-items: center;
             width: 360px;
             row-gap: 0.5rem;
-            height: 570px;
-            padding: 10px;
+            height: 600px;
+            padding: 20px;
             background: #e5e5e5;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             font-size: 17px;
@@ -3694,9 +3694,8 @@ background: #717171;
 }
 .NAME{
     width: auto;
-    height: 500px;
-    padding: 10px;
-    color: rgba(89, 36, 158, 0.888);
+    height: 570px;
+    color: rgba(81, 36, 139, 0.888);
     font-size: 16px;
     line-height: 21px;
 }
@@ -5593,6 +5592,8 @@ function showSlides(n) {
         <br>
      M. Case (MA-USA-AUSTRALIA)
     <br>
+     Mark CASE & Kim & Family (NH-USA)
+    <br>
      A. Owre (ME-USA)
      <br>
      NTL. Owre (ME-USA)
@@ -5604,6 +5605,8 @@ function showSlides(n) {
      B. Drake (MA-USA)
      <br>
      J. J. Hall & Family (NY-USA)
+     <br>
+     J. Valette (ME-USA)
      <br>
      W. Sugg & Family (ME-USA) 
      <br>
