--- a/index.html
+++ b/index.html
@@ -3685,7 +3685,7 @@ background: #717171;
             justify-items: center;
             width: 360px;
             row-gap: 0.5rem;
-            height: 600px;
+            height: 630px;
             padding: 20px;
             background: #e5e5e5;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -3694,7 +3694,7 @@ background: #717171;
 }
 .NAME{
     width: auto;
-    height: 570px;
+    height: 600px;
     color: rgba(81, 36, 139, 0.888);
     font-size: 16px;
     line-height: 21px;
@@ -5589,6 +5589,8 @@ function showSlides(n) {
         IDRISSA ROBERT alias N'KOFFE (ZNR-BFASO)
         <br>
         Emma Matiti & Friends (AVV-BFASO)
+        <br>
+        Adama Komd. ZOMBRE (OUAGA-BFASO)
         <br>
      M. Case (MA-USA-AUSTRALIA)
     <br>
