--- a/index.html
+++ b/index.html
@@ -3630,7 +3630,7 @@ background: #717171;
             justify-items: center;
             font-family: 'arial';
             width: 650px;
-            height: 550px;
+            height: 540px;
             padding: 10px;
             border: none;
             font-size: 15.48px;
@@ -3689,15 +3689,16 @@ background: #717171;
             padding: 20px;
             background: #e5e5e5;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 17px;
+            font-size: 16.5px;
             text-align: left;
+            border-radius: 0.5rem;
 }
 .NAME{
     width: auto;
     height: 600px;
     color: rgba(81, 36, 139, 0.888);
-    font-size: 16px;
-    line-height: 21px;
+    font-size: 15.5px;
+    line-height: 20.5px;
 }
 
 .button{
@@ -5492,7 +5493,7 @@ function showSlides(n) {
 
 <div class="Promo">
     <p>
-        The vision of Tiki N'Yiki is promoted by Gabriel, a physical disabled person. He received his college degree education
+        <b>The vision of Tiki N'Yiki is promoted by Gabriel</b>, a physical disabled person. He received his college degree education
         at Bassy high school in <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> 
         and then at <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton</a> 
         high school in <a href="https://mairie-ouaga.bf/accueil" target="_blank"> Ouagadougou</a> 
@@ -5586,7 +5587,9 @@ function showSlides(n) {
         <br>
         Ben OUED (ZNR-BFASO)
         <br>
-        IDRISSA ROBERT alias N'KOFFE (ZNR-BFASO)
+        IDRISSA R. N'KOFFE (ZNR-BFASO)
+        <br>
+        Koro Desiré & Family (ZNR-BFASO)
         <br>
         Emma Matiti & Friends (AVV-BFASO)
         <br>
@@ -5594,15 +5597,15 @@ function showSlides(n) {
         <br>
      M. Case (MA-USA-AUSTRALIA)
     <br>
-     Mark CASE & Kim & Family (NH-USA)
+     Mark & Kim CASE (NH-USA)
     <br>
      A. Owre (ME-USA)
      <br>
-     NTL. Owre (ME-USA)
+     Ntl. Owre (ME-USA)
      <br>
      B. Owre (ME-USA)
      <br>
-     E.Tipper (ME-USA)
+     E. Tipper (ME-USA)
      <br>
      B. Drake (MA-USA)
      <br>
@@ -5620,7 +5623,7 @@ function showSlides(n) {
      <br>
      Manon B. (QC-CA)
      <br>
-     Vivi (QC-CA)
+     Viviane (QC-CA)
      <br>
      I. Simpore (ON-CA)
      <br>
