--- a/index.html
+++ b/index.html
@@ -5503,14 +5503,14 @@ function showSlides(n) {
 
 <div class="Promo">
     <p>
-        <b>The vision of Tiki N'Yiki is promoted by Gabriel</b>, a physical disabled person. He received his college degree education
+        <b>The vision of Tiki N'Yiki is promoted by Gabriel</b>, a physical disabled person from Burkina Faso. He received his college degree
         at Bassy high school in <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> 
-        and then at <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton</a> 
-        high school in <a href="https://mairie-ouaga.bf/accueil" target="_blank"> Ouagadougou</a> 
-        * <a href="https://www.ontb.bf/" target="_blank">Burkina Faso</a>. He holds a Patent of Undergraduate Studies (P.U.S) called B.E.P.C in French.
+        and then moved to Ouagadougou at <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton</a> 
+        high school. 
+        He holds a Patent of Undergraduate Studies (P.U.S) called B.E.P.C in French.
        
-        As a fervent defender of Disability Rights, Gabriel was involved in several associations in the field of education,
-        promotion and defense of Disability Rights, especially rights belonging to disabled children including the right to get educated.
+        As a fervent defender of Disability Rights, Gabriel has known he has to get involved in many activities about disablity in finding, structuring ideas; then implementing them practically and through reality. Ideas are diverse but those that are linked frontally to disability are focal subjects. The need to obtain results in terms of social impacts for disabled people and may to the whole communities where they are living is a huge cause that sharpened Gabriel through his Vision about education for disabled.
+        This is a way to promote and defend Disability Rights, especially the rights to get educated for everyone no matter who you are.
 
          </p>
         
