--- a/index.html
+++ b/index.html
@@ -3616,8 +3616,8 @@ background: #717171;
             justify-items: center;
             column-gap: 1rem;
             width: 84%;
-            height: 100%;
-            padding: 10px;
+            height: auto;
+            padding: 20px;
             margin-top: 3rem;
             margin-bottom: 1rem;
             border-bottom: 0.12rem solid rgba(203, 203, 203, 0.964);
@@ -3670,6 +3670,7 @@ background: #717171;
             height: auto;
             justify-content: center;
             align-items: center;
+            border-bottom: 0.75rem solid rgba(52, 74, 139, 0.374);
         }
         .Pro2 img{  
     width: 300px;
@@ -3686,27 +3687,29 @@ background: #717171;
             justify-items: center;
             width: 360px;
             row-gap: 0.5rem;
-            height: 630px;
+            height: 700px;
             padding: 20px;
             background: #e5e5e5;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             font-size: 16.5px;
             text-align: left;
-            border-radius: 0.5rem;
 }
 .NAME{
-    width: auto;
+    width: 300px;
     height: 600px;
-    color: rgba(51, 84, 177, 0.888);
+    padding: 20px;
+    color: rgba(31, 49, 101, 0.888);
     font-size: 14px;
-    line-height: 20.5px;
-    font-family:Arial, Helvetica, sans-serif;
+    line-height: 20px;
+    border-left: 0.75rem solid rgba(52, 74, 139, 0.6);
+    border-top: 0.75rem solid rgba(52, 74, 139, 0.6);
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 .button{
     background: gainsboro;
-    width: 100px;
-    height: 50px;
+    width: 111px;
+    height: 45px;
     padding: 5px;
     border-radius: 0.35rem;
     font-size: 14px;
@@ -3715,7 +3718,7 @@ background: #717171;
 }
 
 .button:hover{
-    background: rgb(208, 208, 208);
+    background: rgb(208, 207, 207);
     color: #000;
     transition: 0.18s ease-in;
 }
