--- a/index.html
+++ b/index.html
@@ -3670,13 +3670,13 @@ background: #717171;
             height: auto;
             justify-content: center;
             align-items: center;
-            border-bottom: 0.75rem solid rgba(52, 74, 139, 0.374);
+            border-bottom: 0.75rem solid rgba(60, 83, 155, 0.374);
         }
         .Pro2 img{  
     width: 300px;
     height: auto;
     padding: 4px;
-    border: 0.13rem solid rgba(168, 172, 180, 0.902);
+    border: 0.13rem solid rgba(60, 83, 155, 0.374);
     border-radius: 50%;
 }
 
@@ -3698,11 +3698,11 @@ background: #717171;
     width: 300px;
     height: 600px;
     padding: 20px;
-    color: rgba(31, 49, 101, 0.888);
-    font-size: 14px;
-    line-height: 20px;
-    border-left: 0.75rem solid rgba(52, 74, 139, 0.6);
-    border-top: 0.75rem solid rgba(52, 74, 139, 0.6);
+    color: rgba(46, 70, 143, 0.888);
+    font-size: 13.78px;
+    line-height: 20.4px;
+    border-left: 0.7rem solid rgba(86, 115, 201, 0.267);
+    border-top: 0.7rem solid rgba(86, 115, 201, 0.267);
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
@@ -5590,7 +5590,7 @@ function showSlides(n) {
     </div>
 
     <div class="NAME"> 
-        MY MOM & DAD (ZNR-BFASO)
+    <em>  MY MOM & DAD (ZNR-BFASO)
         <br>
         Sister SUZI. & Family (ZNR-BFASO)
         <br>
@@ -5645,6 +5645,7 @@ function showSlides(n) {
 Friends from Switzerland
 <br>
 Friends from France
+</em>
     </div>
 </div>
 
