--- a/index.html
+++ b/index.html
@@ -5590,7 +5590,7 @@ function showSlides(n) {
     </div>
 
     <div class="NAME"> 
-    <em>  MY MOM & DAD (ZNR-BFASO)
+     MY MOM & DAD (ZNR-BFASO)
         <br>
         Sister SUZI. & Family (ZNR-BFASO)
         <br>
@@ -5645,7 +5645,7 @@ function showSlides(n) {
 Friends from Switzerland
 <br>
 Friends from France
-</em>
+
     </div>
 </div>
 
