--- a/index.html
+++ b/index.html
@@ -3695,11 +3695,11 @@ background: #717171;
     width: 300px;
     height: 600px;
     padding: 20px;
-    color: rgba(46, 70, 143, 0.888);
+    color: rgba(46, 67, 125, 0.934);
     font-size: 13.78px;
     line-height: 20.4px;
     border-top: 0.7rem solid rgba(110, 133, 204, 0.267);
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .button{
