--- a/index.html
+++ b/index.html
@@ -3588,23 +3588,23 @@ background: #717171;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            background: purple; 
+            background: rgb(189, 188, 188); 
             font-family: 'Merienda'; 
             font-size: 22px; 
-            color: #fff; 
-            width: 200px; 
+            color: #4b4b4b; 
+            width: 180px; 
             height: 50px;
             padding: 10px;
-            border-radius: 0.5rem;
+            border-radius: 0.35rem;
             cursor: pointer;
-            margin-top: 0.5rem;
-            margin-bottom: 0.5rem;
+            margin-top: 0.65rem;
+            margin-bottom: 0.75rem;
     }
 
     .TOPE:hover{
-        background: rgb(5, 156, 5);
+        background: rgb(125, 125, 125); 
         transition: 0.2s linear;
-        color: rgba(255, 255, 0, 0.953);
+        color: #000;
     }
         .Promotion{
             display: grid;
@@ -3709,12 +3709,12 @@ background: #717171;
     padding: 5px;
     border-radius: 0.35rem;
     font-size: 14px;
-    color: grey;
+    color: rgb(107, 107, 107);
     cursor: pointer;
 }
 
 .button:hover{
-    background: rgb(208, 207, 207);
+    background: rgb(199, 199, 199);
     color: #000;
     transition: 0.18s ease-in;
 }
