--- a/index.html
+++ b/index.html
@@ -5502,19 +5502,19 @@ function showSlides(n) {
 
 <div class="Promo">
     <p>
-        <b>The vision of Tiki N'Yiki is promoted by Gabriel</b>, a physical disabled person from Burkina Faso. He received his college degree
+        <b>The vision of Tiki N'Yiki is promoted by Gabriel, a physical disabled person from Burkina Faso</b>. He received his college degree
         at Bassy high school in <a href="https://civitac.org/spip.php?article447" target="_blank">Ziniaré</a> 
         and then moved to Ouagadougou at <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton</a> 
         high school. 
         He holds a Patent of Undergraduate Studies (P.U.S) called B.E.P.C in French.
        
-        As a fervent defender of Disability Rights, Gabriel has known he has to get involved in many activities about disablity in finding out, structuring; then implementing them practically and through reality. Ideas are diverse but those that are linked frontally to disability are focal subjects. The need to obtain results in terms of social impacts for disabled people and may to the whole communities where they are living is a huge cause that sharpened Gabriel through his Vision about education for disabled.
-        It is a way to promote, defend and protect Disability Rights, especially the right to get educated for everyone no matter who you are.
+        As a fervent defender of Disability Rights, Gabriel knew he has to involve himself in many activities about disablity in finding out, structuring and implementing practically his ideas. Ideas are diverse but those linked frontally to disability are focal subjects of interest for him. The need to get results in terms of social impacts for disabled people and also to the whole communities where they are living, is a huge cause that sharpened the dynamism of Gabriel.
+        It is a way to promote, defend and protect Disability Rights, especially the right to get educated no matter who you are.
 
          </p>
         
          <p>
-          In 2006 <span id="dots">...</span><span id="more"> Gabriel was one of the founding members of PAAS NEERE, an organisation for disabled people
+          In 2006 <span id="dots">...</span><span id="more"> Gabriel was one of the founding members of PAAS NEERE, an educational organisation
           </a> in which he taught disabled and orphaned children and led several awareness sessions with the focal theme as “Disability and Social Inclusion”.
           <br>
           <br>                    
