--- a/index.html
+++ b/index.html
@@ -2666,7 +2666,7 @@ height: auto;
             width: 84%;
             height: 700px;
             padding: 10px;
-            background: #f0f0f0;
+            background: rgba(252, 252, 252, 0.185);
             font-family: 'Merienda';
             font-size: 15.75px;
             color: rgb(42, 40, 42);
@@ -2739,7 +2739,7 @@ display: grid;
 grid-template-columns: 1fr;
 justify-content: center;
 justify-items: center;
-background: #fff;
+background: #f6f6f6eb;
 font-family: 'Merienda';
 font-size: 13.6px;
 box-shadow: 2px 3px 0.5rem 1px rgba(19, 19, 99, 0.796);
@@ -2748,7 +2748,7 @@ border-radius: 0.5rem;
 width: 147.5px;
 height: 60px;
 padding: 15px;
-color: rgb(21, 21, 132);
+color: rgb(38, 38, 132);
 cursor: pointer;
         }
         .FASO:hover{
