--- a/index.html
+++ b/index.html
@@ -2660,7 +2660,7 @@ height: auto;
         .BURKINAFASO{
             display: grid;
             grid-template-rows: 0.5fr 1fr;
-            column-gap: 3rem;
+            column-gap: 1rem;
             justify-content: center;
             justify-items: center;
             width: 84%;
@@ -2675,9 +2675,9 @@ height: auto;
         }
 .Bmap{
     display: grid;
-    grid-template-columns: 0.25fr 1.85fr;
-    column-gap: 1rem;
-    justify-content: space-between;
+    grid-template-columns: 0.1fr 0.15fr;
+    column-gap: 0.2rem;
+    justify-content: center;
     justify-items: center;
     width: 100%;
     height: 180px;
