--- a/index.html
+++ b/index.html
@@ -1072,7 +1072,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background-color: rgba(249, 249, 249, 0.891);
+            background-color: rgba(248, 248, 248, 0.838);
             justify-content: center;
             align-items: center;
         }
@@ -2265,7 +2265,7 @@ height: auto;
             padding: 20px;
             justify-content: center;
             justify-items: center;
-            background: #fff;
+            background: rgba(244, 244, 244, 0.762);
             box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
@@ -2273,7 +2273,7 @@ height: auto;
     display: grid;
     grid-template-columns: 0.45fr 1fr;
     column-gap: 0.3rem;
-    background: #f6f6f68a;
+    background: rgba(242, 242, 242, 0.6);
     display: grid;
     justify-content: space-between;
     justify-items: center;
@@ -2664,13 +2664,13 @@ height: auto;
             justify-content: center;
             justify-items: center;
             width: 84%;
-            height: 700px;
+            height: 718px;
             padding: 10px;
-            background: rgba(252, 252, 252, 0.185);
+            background: rgba(236, 235, 235, 0.762);
             font-family: 'Merienda';
             font-size: 15.75px;
             color: rgb(42, 40, 42);
-            box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
+            box-shadow: 0 0 0.5rem 0.5px rgb(108, 161, 246);
 
         }
 .Bmap{
@@ -2682,6 +2682,7 @@ height: auto;
     width: 100%;
     height: 180px;
     padding: 10px;
+    margin-top: 1rem;
 }
 
 .Burkimap img{
@@ -2739,11 +2740,11 @@ display: grid;
 grid-template-columns: 1fr;
 justify-content: center;
 justify-items: center;
-background: #f6f6f6eb;
+background: #fcfcfceb;
 font-family: 'Merienda';
 font-size: 12.5px;
-box-shadow: 2px 3px 0.5rem 1px rgba(19, 19, 99, 0.796);
-border: 1.5px solid rgba(64, 64, 70, 0.796);
+box-shadow: 2px 3px 0.5rem 1px rgba(34, 34, 169, 0.796);
+border: 1.5px solid rgba(77, 77, 84, 0.796);
 border-radius: 0.5rem;
 width: 140px;
 height: 60px;
