--- a/index.html
+++ b/index.html
@@ -2265,7 +2265,7 @@ height: auto;
             padding: 20px;
             justify-content: center;
             justify-items: center;
-            background: rgba(244, 244, 244, 0.762);
+            background: rgba(196, 196, 196, 0.458);
             box-shadow: 0 0 0.5rem 0.5px rgb(49, 128, 255);
         }
 
@@ -2273,7 +2273,7 @@ height: auto;
     display: grid;
     grid-template-columns: 0.45fr 1fr;
     column-gap: 0.3rem;
-    background: rgba(242, 242, 242, 0.6);
+    background: rgba(246, 246, 246, 0.6);
     display: grid;
     justify-content: space-between;
     justify-items: center;
@@ -2666,7 +2666,7 @@ height: auto;
             width: 84%;
             height: 718px;
             padding: 10px;
-            background: rgba(236, 235, 235, 0.762);
+            background: rgba(237, 236, 236, 0.762);
             font-family: 'Merienda';
             font-size: 15.75px;
             color: rgb(42, 40, 42);
@@ -2740,7 +2740,7 @@ display: grid;
 grid-template-columns: 1fr;
 justify-content: center;
 justify-items: center;
-background: #fcfcfceb;
+background: #fffefee0;
 font-family: 'Merienda';
 font-size: 12.5px;
 box-shadow: 2px 3px 0.5rem 1px rgba(34, 34, 169, 0.796);
@@ -3633,7 +3633,7 @@ background: #717171;
             padding: 10px;
             border: none;
             font-size: 15.48px;
-            color: grey;
+            color: rgb(129, 129, 129);
             line-height: 22px;
         }
 
@@ -3688,15 +3688,16 @@ background: #717171;
             height: 700px;
             padding: 20px;
             background: #eeeeee;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-family: 'Merienda';
             font-size: 16.5px;
+            color: gray;
             text-align: left;
 }
 .NAME{
     width: 300px;
     height: 600px;
     padding: 20px;
-    color: rgba(46, 67, 125, 0.934);
+    color: rgb(126, 126, 126);
     font-size: 13.78px;
     line-height: 20.4px;
     border-top: 0.7rem solid rgba(110, 133, 204, 0.267);
@@ -5508,8 +5509,11 @@ function showSlides(n) {
         and then moved to Ouagadougou at <a href="https://www.africabizinfo.com/fr-BF/lyc%C3%A9e-newton-descartes" target="_blank">Newton</a> 
         high school. 
         He holds a Patent of Undergraduate Studies (P.U.S) called B.E.P.C in French.
-       
-        As a fervent defender of Disability Rights, Gabriel knew he has to involve himself in many activities about disablity in finding out, structuring and implementing practically his ideas. Ideas are diverse but those linked frontally to disability are focal subjects of interest for him. The need to get results in terms of social impacts for disabled people and also to the whole communities where they are living, is a huge cause that sharpened the dynamism of Gabriel.
+        <br>
+        As a fervent defender of Disability Rights, Gabriel knew he has to involve himself in many activities about disablity in finding out, structuring and implementing practically his ideas. Ideas are diverse but those linked frontally to disability are focal subjects of interest for him. 
+         <br>
+          <br>
+        The need to get results in terms of social impacts for disabled people and also to the whole communities where they are living, is a huge cause that sharpened the dynamism of Gabriel.
         It is a way to promote, defend and protect Disability Rights, especially the right to get educated no matter who you are.
 
          </p>
@@ -5580,7 +5584,7 @@ function showSlides(n) {
 
 <div class="Thankiou"> 
     <div> 
-    <b> THANKSGIVINGS  /  REMERCIEMENTS </b>
+    <b> THANKSGiViNGS  /  REMERCiEMENTS </b>
     </div>
 
     <div class="NAME"> 
