--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         }
         
         .navbar {
-            background: rgba(5, 13, 53, 0.851);
-            height: 63.35px;
+            background: rgba(5, 13, 53, 0.962);
+            height: 63px;
             object-fit: cover;
             z-index: 1;
             top: 0;
@@ -139,7 +139,7 @@
   align-items: center;
   display: none;
   position: absolute;
-  background: #f6f6f6;
+  background: #fff;
   padding: 1px;
   z-index: 1;
   box-shadow: 0 4px 0.45rem 4px rgba(8, 20, 78, 0.913);
@@ -149,7 +149,7 @@
         .Photography-content a {
             font-size: 17px;
             float: none;
-            color: #2635a3;
+            color: #24308d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -214,7 +214,7 @@
   align-items: center;
   display: none;
   position: absolute;
-  background: #f6f6f6;
+  background: #fff;
   padding: 1px;
   z-index: 1;
   box-shadow: 0 4px 0.45rem 4px rgba(8, 20, 78, 0.913);
@@ -224,7 +224,7 @@
         .Sport-content a {
             font-size: 16px;
             float: none;
-            color: #2635a3;
+            color: #24308d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -286,7 +286,7 @@
         .Education-content {
   display: none;
   position: absolute;
-  background: #f6f6f6;
+  background: #fff;
   border-top: 0.1rem solid rgb(5, 5, 85);
   padding: 1px;
   z-index: 1;
@@ -301,7 +301,7 @@
         .Education-content a {
             font-size: 16px;
             float: none;
-            color: #2635a3;
+            color: #24308d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -363,7 +363,7 @@
         .Promoter-content {
   display: none;
   position: absolute;
-  background: #f6f6f6;
+  background: #fff;
   padding: 1px;
   width: 75px;
   height: 55px;
@@ -377,7 +377,7 @@
         .Promoter-content a {
             font-size: 17px;
             float: none;
-            color: #2635a3;
+            color: #24308d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -439,7 +439,7 @@
         .Contact-content {
   display: none;
   position: absolute;
-  background: #f6f6f6;
+  background: #fff;
   padding: 1px;
   width: 75px;
   height: 55px;
@@ -454,7 +454,7 @@
             width: 73px;
             font-size: 17px;
             float: none;
-            color: #2635a3;
+            color: #24308d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -520,7 +520,7 @@
   align-items: center;
   display: none;
   position: absolute;
-  background: #f6f6f6;
+  background: #fff;
   padding: 1px;
   z-index: 1;
   box-shadow: 0 4px 0.45rem 4px rgba(8, 20, 78, 0.913);
@@ -530,7 +530,7 @@
         .Community-content a {
             font-size: 17px;
             float: none;
-            color: #2c3bab;
+            color: #24308d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -593,7 +593,7 @@
         .TikiYiki-content {
   display: none;
   position: absolute;
-  background: #f6f6f6;
+  background: #fff;
   padding: 1px;
   z-index: 1;
   box-shadow: 0 4px 0.45rem 4px rgba(8, 20, 78, 0.913);
@@ -608,7 +608,7 @@
         .TikiYiki-content a {
             font-size: 17px;
             float: none;
-            color: #2635a3;
+            color: #24308d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -672,7 +672,7 @@
         .Disability-content {
   display: none;
   position: absolute;
-  background: #f6f6f6;
+  background: #fff;
   padding: 1px;
   z-index: 1;
   box-shadow: 0 4px 0.45rem 4px rgba(8, 20, 78, 0.913);
@@ -686,7 +686,7 @@
         .Disability-content a {
             font-size: 17px;
             float: none;
-            color: #2635a3;
+            color: #24308d;
             padding: 14px 16px;
             text-decoration: none;
             display: block;
@@ -3865,7 +3865,7 @@ function showSlides(n) {
 
         <div class="TikiYiki">
 
-            <button class="dropbtn"><b>Tiki Yiki</b>
+            <button class="dropbtn">Tiki Yiki
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -3885,7 +3885,7 @@ function showSlides(n) {
             </div>
 
         <div class="Disability">
-            <button class="dropbtn"><b>Disability</b>
+            <button class="dropbtn">Disability
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -3911,7 +3911,7 @@ function showSlides(n) {
     </div>
 
         <div class="Community">
-            <button class="dropbtn"><b>Play Geography</b>
+            <button class="dropbtn">Play Geography
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -3940,7 +3940,7 @@ function showSlides(n) {
     </div>
 
         <div class="Education">
-            <button class="dropbtn"><b>Let's Learn</b>
+            <button class="dropbtn">Let's Learn
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -3963,7 +3963,7 @@ function showSlides(n) {
     </div>
 
         <div class="Photography">
-            <button class="dropbtn"><b>Art And Culture</b>
+            <button class="dropbtn">Art And Culture
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -3986,7 +3986,7 @@ function showSlides(n) {
         </div>
 
         <div class="Sport">
-            <button class="dropbtn"><b>Sport</b>
+            <button class="dropbtn">Sport
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -4008,7 +4008,7 @@ function showSlides(n) {
     </div>
 
         <div class="Promoter">
-            <button class="dropbtn"><b>Promoter</b>
+            <button class="dropbtn">Promoter
                 <i class="fa fa-caret-down">
                 </i>
             </button>
@@ -4025,7 +4025,7 @@ function showSlides(n) {
 
 
         <div class="Contact">
-            <button class="dropbtn"><b>Contact</b>
+            <button class="dropbtn">Contact
                 <i class="fa fa-caret-down">
                 </i>
             </button>
